apps/plex/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    run: plex
  name: plex
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      run: plex
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        run: plex
    spec:
      hostNetwork: true # Required to get local apps to hit correct interfaces :yuck:
      containers:
        - env:
            - name: PUID
              value: "65534"
            - name: PGID
              value: "65534"
          image: linuxserver/plex
          name: plex
          ports:
            - containerPort: 32400
              name: webui
              protocol: TCP
          volumeMounts:
            - mountPath: "/data"
              name: media
            - mountPath: "/config"
              name: config
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: nfs-media
        - name: config
          persistentVolumeClaim:
            claimName: plex-config-iscsi
