apps/plex/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: plex
spec:
  ports:
  - port: 32400
    protocol: TCP
    targetPort: 32400
    name: webui
  selector:
    run: plex
